<?xml version="1.0" encoding="utf-8"?>

<!--<PreferenceScreen android:key="prefs" xmlns:android="http://schemas.android.com/apk/res/android" >-->

<!--<PreferenceCategory android:key="pref_bridge_config"  android:title="@string/pref_bridge_config" >-->
    <!--<EditTextPreference-->
        <!--android:title="@string/pref_ip_address"-->
        <!--android:summary="@string/pref_ip_address_summary"-->
        <!--android:key="prefBridgeIpAddress"/>-->
<!--</PreferenceCategory>-->

<!--<PreferenceCategory android:title="@string/pref_active_bulbs" >
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="prefSendReport"
        android:summary="@string/pref_send_report_summary"
        android:title="@string/pref_send_report" >
    </CheckBoxPreference>

    <ListPreference
        android:key="prefSyncFrequency"
        android:entries="@array/syncFrequency"
        android:summary="@string/pref_sync_frequency_summary"
        android:entryValues="@array/syncFrequencyValues"
        android:title="@string/pref_sync_frequency" />
</PreferenceCategory>-->

<!--</PreferenceScreen>-->



<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:title="@string/pref_title_datastore"
    android:key="pref_key_datastore">

    <EditTextPreference
    android:title="Username"
    android:summary="The username we use to connect to the bridge."
    android:key="@string/pref_key_username"/>

    <EditTextPreference
        android:title="Bridge IP"
        android:summary="The IP address of the bridge we connected to the last time."
        android:key="@string/pref_key_bridge_ip"/>

    <EditTextPreference
        android:title="Light Group"
        android:summary="The name of the light group we use for the schedule."
        android:key="@string/pref_key_light_group"/>

    <EditTextPreference
        android:title="Schedule Name On"
        android:summary="The name of the schedule that turns the lights on."
        android:key="@string/pref_key_schedule_name_on"/>

    <EditTextPreference
        android:title="Schedule Name Brighten"
        android:summary="The name of the schedule that increases the brightness."
        android:key="@string/pref_key_schedule_name_brighten"/>

    <EditTextPreference
        android:title="Schedule Name Off"
        android:summary="The name of the schedule that turns the lights off again."
        android:key="@string/pref_key_schedule_name_off"/>

    <EditTextPreference
        android:title="Schedule ID On"
        android:summary="The ID of the schedule that turns the lights on."
        android:key="@string/pref_key_schedule_id_on"/>

    <EditTextPreference
        android:title="Schedule ID Brighten"
        android:summary="The ID of the schedule that increases the brightness."
        android:key="@string/pref_key_schedule_id_brighten"/>

    <EditTextPreference
        android:title="Schedule ID Off"
        android:summary="The ID of the schedule that turns the lights off again."
        android:key="@string/pref_key_schedule_id_off"/>

    <EditTextPreference
        android:title="Transition Minutes"
        android:inputType="number"
        android:key="@string/pref_key_transition_minutes" />
    <!--android:summary="The number of minutes the light takes to transition from simply on to full brightness."-->
    <!--<CheckBoxPreference-->
        <!--android:key="pref_key_auto_delete"-->
        <!--android:summary="deletes messages"-->
        <!--android:title="delete messages"-->
        <!--android:defaultValue="false" />-->
    <!--<Preference-->
        <!--android:key="pref_key_sms_delete_limit"-->
        <!--android:dependency="pref_key_auto_delete"-->
        <!--android:summary="how many sms"-->
        <!--android:title="should we delete" />-->
    <!--<Preference-->
        <!--android:key="pref_key_mms_delete_limit"-->
        <!--android:dependency="pref_key_auto_delete"-->
        <!--android:summary="how many mms"-->
        <!--android:title="should we delete" />-->
</PreferenceCategory>
</PreferenceScreen>