<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen android:key="prefs" xmlns:android="http://schemas.android.com/apk/res/android" >

<PreferenceCategory android:key="pref_bridge_config"  android:title="@string/pref_bridge_config" >
    <EditTextPreference
        android:title="@string/pref_ip_address"
        android:summary="@string/pref_ip_address_summary"
        android:key="prefBridgeIpAddress"/>
</PreferenceCategory>

<!--<PreferenceCategory android:title="@string/pref_active_bulbs" >
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="prefSendReport"
        android:summary="@string/pref_send_report_summary"
        android:title="@string/pref_send_report" >
    </CheckBoxPreference>

    <ListPreference
        android:key="prefSyncFrequency"
        android:entries="@array/syncFrequency"
        android:summary="@string/pref_sync_frequency_summary"
        android:entryValues="@array/syncFrequencyValues"
        android:title="@string/pref_sync_frequency" />
</PreferenceCategory>-->

</PreferenceScreen>